# websearch

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_cache.py  test_doctor.py  test_features.py  test_gap_fixes.py  test_mcp_safety.py  test_openalex.py  test_parsers.py  test_reputation.py  test_truncate.py  test_youtube_metadata.py
tests/fixtures/: bing.html  ddg.html  ddg_blocked.html  ddg_empty.html
websearch/: __init__.py  browser.py  cache.py  cli.py  core.py  dates.py  doctor.py  gh.py  mcp_server.py  openalex.py  pdfx.py  reputation.py  rerank.py  transcripts.py  usernames.py
