[project]
name = "websearch"
version = "0.2.0"
description = "Better web search and fetch CLI for use by AI assistants and humans"
requires-python = ">=3.10"
dependencies = [
    "requests[socks]>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
mcp = ["mcp>=1.2"]
youtube = ["youtube-transcript-api>=0.6"]
whisper = ["faster-whisper>=1.0"]
embed = ["sentence-transformers>=3.0"]
browser = ["camoufox>=0.4"]
# brave/tavily/exa use only `requests` (already a core dep), so no
# extra package install needed — they're listed for discoverability:
# `pip show websearch` shows what optional backends exist.
brave = []
tavily = []
exa = []

[project.scripts]
websearch = "websearch.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["websearch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
